syntax = "proto3";

package example.v1;

option csharp_namespace = "GreeterProtos.Example.V1";

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply);

  // Sends multiple greetings
  rpc SayHelloStream(HelloRequest) returns (stream HelloReply);

  // Receives multiple names and sends back greetings
  rpc SayHelloToMany(stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int64 timestamp = 2;
}
