syntax = "proto3";

package example.v1;

option java_multiple_files = true;
option java_outer_classname = "GreeterProto";
option java_package = "com.example.grpc.v1";

// The greeter service definition
service GreeterService {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloResponse);

  // Sends multiple greetings (server streaming)
  rpc SayHelloStream(HelloRequest) returns (stream HelloResponse);

  // Receives multiple requests (client streaming)
  rpc SayHelloClientStream(stream HelloRequest) returns (HelloResponse);

  // Bidirectional streaming
  rpc SayHelloBidirectional(stream HelloRequest) returns (stream HelloResponse);
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
  optional string title = 2;
}

// The response message containing the greeting
message HelloResponse {
  string message = 1;
  int64 timestamp = 2;
}
